sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:15: error: '=>' expected but ',' found.
          case baseDepart,posDepart => deplaceJoueur(baseDepart, posDepart, base, 0)
                         ^SelectBaseball:23: error: '=>' expected but ',' found.
          case baseDepart,posDepart => deplaceJoueur(baseDepart, posDepart, base, 1)
                         ^